vbnc/vbnc/vbnc/tests/Errors/30311-14.vb
Class T
    Const M_Date As Date = 3I
End Class